--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-# MySQL ??
+logging.level.root=info
+
+# MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB Source URL
-spring.datasource.url=jdbc:mysql://localhost:3306/ToyProject?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/ToyProject?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
 
 # DB username
 spring.datasource.username=root
@@ -10,11 +12,29 @@ spring.datasource.username=root
 # DB password
 spring.datasource.password=1234
 
-# true ??? JPA ??? ?? ??
+# true
 spring.jpa.show-sql=true
 
-# DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
+# DDL(create, alter, drop)
 spring.jpa.hibernate.ddl-auto=create
 
-# JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
+#
 spring.jpa.properties.hibernate.format_sql=true
+
+# Spring Security name & password
+spring.security.user.name=user
+spring.security.user.password=1234
+
+# thymeleaf 참조 경로
+spring.thymeleaf.prefix=classpath:/templates/
+
+# Controller 에서 확장자를 붙이지 않아도 인식
+spring.thymeleaf.suffix=.html
+
+# thymeleaf 에 대한 캐시를 남기지 않는다. cache=false 설정 (운영시는 true)
+spring.thymeleaf.cache=true
+
+# templates 디렉토리에 파일이 있는지 없는지 체크, 없으면 에러를 발생시킨다.
+spring.thymeleaf.check-template-location=true
+
+
